# Bubbles

./: .gitignore  LICENSE  README.md  icon.icns  main.py  main.spec  mainOOP.py  main_OOP.py  main_historic.py  pyproject.toml
executable/folder/Bubbles/Bubbles.app/Contents/MacOS/: sound
executable/folder/Bubbles/Bubbles.app/Contents/_CodeSignature/: CodeResources
executable/folder/Bubbles/main/: Python  libcrypto.1.1.dylib
executable/macos/folder/Bubbles/Bubbles.app/Contents/MacOS/: main
executable/macos/folder/Bubbles/main/: libsqlite3.0.dylib  libssl.1.1.dylib  main
